examples/test-ingress-nginx.yaml
apiVersion: "networking.k8s.io/v1beta1"
kind: Ingress
metadata:
  name: test-ingress-nginx-1
  namespace: dev
  labels:
    app.kubernetes.io/name: test-ingress-nginx-1
    app.kubernetes.io/instance: test-ingress-nginx-1
  annotations:
        kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: foo.127.0.0.1.nip.io
    http:
      paths:
      - path: /
        pathType: "Prefix"
        backend:
          serviceName: echo-echo-server
          servicePort: http
